--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ url:           http://scottblinch.github.io/code-guide/
 markdown:      rdiscount
 permalink:     pretty
 pygments:      true
+
+theme: jekyll-theme-slate
