--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name:          Code Guide by tbk Creative
+name:          Code Guide
 description:   Standards for developing flexible, durable, and sustainable HTML and CSS within tbk Creative.
 url:           http://scottblinch.github.io/code-guide/
 
